--- a/Views/SaleWindow.xaml
+++ b/Views/SaleWindow.xaml
@@ -134,19 +134,19 @@
                   HeadersVisibility="Column"
                   Margin="0,0,0,10">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="Наименование"
-                                    Binding="{Binding Name}"
+                <DataGridTextColumn Header="Наименование" IsReadOnly="True" 
+                                    Binding="{Binding Name, Mode=OneWay}"
                                     Width="*" />
                 <DataGridTextColumn Header="Цена"
-                                    Binding="{Binding Price}"
-                                    Width="100" />
+                                    Binding="{Binding Price, Mode=OneWay}"
+                                    Width="100" IsReadOnly="True" />
                 <!-- ВАЖНО: добавлен UpdateSourceTrigger -->
                 <DataGridTextColumn Header="Кол-во"
                                     Binding="{Binding Quantity, UpdateSourceTrigger=PropertyChanged}"
                                     Width="80" />
                 <DataGridTextColumn Header="Сумма"
-                                    Binding="{Binding Total}"
-                                    Width="100" />
+                                    Binding="{Binding Total, Mode=OneWay}"
+                                    Width="100" IsReadOnly="True"/>
                 <DataGridTemplateColumn Header="Действия" Width="100">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
