--- a/Views/Reports/PriceListWindow.xaml
+++ b/Views/Reports/PriceListWindow.xaml
@@ -10,6 +10,12 @@
             <Button x:Name="ExportToExcelButton" Content="Вывод в Excel" Click="ExportToExcel" />
             <Button x:Name="BackButton" Content="Назад" Click="GoToAdmin" />
         </StackPanel>
-        <DataGrid x:Name="PriceListGrid" AutoGenerateColumns="False" />
+        <DataGrid x:Name="PriceListGrid" AutoGenerateColumns="False">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="Наименование" Binding="{Binding Name}" Width="*" />
+                <DataGridTextColumn Header="Цена" Binding="{Binding Price}" Width="100" />
+                <DataGridTextColumn Header="Остаток" Binding="{Binding Stock}" Width="100" />
+            </DataGrid.Columns>
+        </DataGrid>
     </DockPanel>
 </Window>
