--- a/Views/Reports/ZeroStockReportWindow.xaml
+++ b/Views/Reports/ZeroStockReportWindow.xaml
@@ -1,20 +1,50 @@
 <Window x:Class="Zoomag.Views.Reports.ZeroStockReportWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Товары с нулевым остатком" Height="600" Width="800">
+        Title="Товары с нулевым остатком"
+        Height="600"
+        Width="800">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
-        <TextBlock Grid.Row="0" Text="Товары с нулевым остатком" FontWeight="Bold" Margin="10,10,10,10"
+        <TextBlock Grid.Row="0"
+                   Text="Товары с нулевым остатком"
+                   FontWeight="Bold"
+                   Margin="10"
                    HorizontalAlignment="Center" />
-        <DataGrid Grid.Row="1" Name="ZeroStockDataGrid" AutoGenerateColumns="False" CanUserAddRows="False"
-                  CanUserDeleteRows="False" HeadersVisibility="Column" Margin="10,0,10,10" />
-        <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Center" Margin="10">
-            <Button Name="ExportToExcelButton" Content="Выгрузить в Excel" Click="ExportToExcel_Click" />
-            <Button Name="BackToReportsButton" Content="Назад к отчетам" Click="BackToReports_Click" />
+        <DataGrid Grid.Row="1"
+                  Name="ZeroStockDataGrid"
+                  AutoGenerateColumns="False"
+                  IsReadOnly="True"
+                  CanUserAddRows="False"
+                  CanUserDeleteRows="False"
+                  HeadersVisibility="Column"
+                  Margin="10,0,10,10">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="Наименование товара"
+                                    Binding="{Binding Name}"
+                                    Width="*" />
+                <DataGridTextColumn Header="Цена, ₽"
+                                    Binding="{Binding Price}"
+                                    Width="120" />
+            </DataGrid.Columns>
+        </DataGrid>
+        <StackPanel Grid.Row="2"
+                    Orientation="Horizontal"
+                    HorizontalAlignment="Center"
+                    Margin="10">
+            <Button Name="ExportToExcelButton"
+                    Content="Выгрузить в Excel"
+                    Click="ExportToExcel_Click"
+                    Padding="10,5"
+                    Margin="0,0,10,0" />
+            <Button Name="BackToReportsButton"
+                    Content="Назад к отчетам"
+                    Click="BackToReports_Click"
+                    Padding="10,5" />
         </StackPanel>
     </Grid>
 </Window>
